[package]
name = "gotham-public"
version = "1.0.0"
edition = "2021"

[lib]
name = "public_server_lib"
path = "src/lib.rs"
[[bin]]
name = "public_server_exec"
path = "src/main.rs"

[dependencies]
rocksdb = { version = "0.21.0" }
chrono = "0.4.26"
cargo-pants = "0.4.16"
redis = { version = "0.23.0", features = ["cluster"] }
thiserror = "1.0"
erased-serde = "0.3"
async-trait = "0.1.73"
tokio = { version = "1", features = ["full"] }
rusoto_core = {version = "0.47", optional = true}
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
log = "0.4"
reqwest = "0.9.5"
failure = "0.1"
floating-duration = "0.1.2"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
config = "0.9.2"
uuid = { version = "0.7", features = ["v4"] }
jsonwebtoken = "8"
hex = "0.4"
two-party-ecdsa = { git = "https://github.com/ZenGo-X/two-party-ecdsa.git", branch="compatibility_gotham_engine" }
gotham-engine = { git = "https://github.com/ZenGo-X/gotham-engine.git" }

[dev-dependencies]
criterion = "0.4.0"
pprof = { version = "0.11", features = ["flamegraph", "frame-pointer", "criterion"] }
rand = "0.8"

[[bench]]
name = "keygen_bench"
harness = false

[[bench]]
name = "sign_bench"
harness = false